小小的提示
增加自己的博客信息 不用删除原有信息

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				<li class="item1">
 					<a href="">Member Blog</a>
 						<ul>
+							<li><a href="http://zhizhi.betahouse.us/">知之</a></li>
 							<li><a href="https://github.com/liuzheng1997/">刘政</a></li>
 						</ul>
 				</li>
