--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               <li><a href="https://coink.wang/">Coink</a></li>
               <li><a href="https://github.com/betaHouse16905214">李博</a></li>
               <li><a href="#">沈骏炜</a></li>
+              <li><a href="#">钱程杰</a></li>
 						</ul>
 				</li>
     	</ul>
