加入胡龙正博客 (#4)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="hotel">
 		<ul class="menu">
 				<li class="item1">
-					<a href="">Member Blog</a>
+					<a href="http://vxenomac.xyz">VXenomac</a>
 						<ul>
 							<li><a href="http://zhizhi.betahouse.us/">知之</a></li>
 							<li><a href="https://github.com/liuzheng1997/">刘政</a></li>
