--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
               <li><a href="http://vxenomac.xyz">VXenomac</a></li>
               <li><a href="https://github.com/rian-day">何宇亨</a></li><!-- 何宇亨 -->
               <li><a href="https://nithhoggr.github.io/xhchen.github.io/">项浩宸</a></li>
+              <li><a href="https://github.com/zc0803">张弛</a></li>
 						</ul>
 				</li>
     	</ul>
